--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+
+*.checked.lax
+out/
+dist/
+
 # User-specific files
 *.rsuser
 *.suo
